# cards-app

./: .code-workspace  .gitignore
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/data/: initial_in_memory_data.json
backend/gcp_emulators/: Dockerfile  firebase.json
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: becfc3d9a041_create_card_template_tables.py
backend/src/cards_app_backend/config/: settings.py
backend/src/cards_app_backend/config/dependencies/: gcp.py  sql_database.py
backend/src/cards_app_backend/core/: api.py  dependencies.py
backend/src/cards_app_backend/integrations/: gcp.py
backend/src/cards_app_backend/template_gallery/: api.py  application_service.py  db_models.py  domain_models.py  exceptions.py  factory.py  repository.py  unit_of_work.py
backend/src/cards_app_backend/user_management/: domain_models.py
frontend/: .prettierrc  README.md  app.config.js  app.json  components.json  eas.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/api/: api.ts
frontend/src/api/CardTemplates/: MockData.ts  api.ts  queries.ts
frontend/src/app/: _layout.tsx
frontend/src/app/(auth)/: _layout.tsx  forgot-password.tsx  sign-in.tsx  sign-up.tsx  verify-email.tsx
frontend/src/app/(tabs)/: _layout.tsx  _layout.web.tsx  card-creator.tsx  home.tsx  received-cards.tsx  template-gallery.tsx
frontend/src/init/: firebase.ts
frontend/src/lib/: localStorage.ts  nativeWindEnablement.ts  settings.ts  theme.ts  useTheme.ts
(+61 files in other folders)
